# reelbyte

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  DESIGN_PLAN.md  Makefile  QUICKSTART_DEPLOY.md  README.md  amsterdam_restaurants_osm.csv  amsterdam_restaurants_osm.json  docker-compose.yml  scrape_amsterdam_openstreetmap.py
backend/: .env.example  .gitignore  Dockerfile  Procfile  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 78d60fdb7bf4_initial_migration_all_models.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: auth.py  clients.py  gigs.py  projects.py  router.py
backend/app/core/: config.py  security.py
backend/app/crud/: client.py  gig.py  project.py  user.py
backend/app/db/: base.py
backend/app/models/: __init__.py  client.py  creator.py  gig.py  message.py  notification.py  project.py  review.py  transaction.py  user.py
backend/app/schemas/: __init__.py  auth.py  client.py  creator.py  gig.py  message.py  project.py  review.py  user.py
backend/app/services/: auth_service.py  client_service.py  gig_service.py  project_service.py
backend/app/websocket/: __init__.py
database/: init.sql
dealhawk-extension/: QUICKSTART.md  README.md  TECHNICAL.md  create_icons.py  manifest.json  setup.sh
docs/: BACKEND_PLAN.md  DATABASE_PLAN.md  DESIGN_SYSTEM_PLAN.md  FRONTEND_PLAN.md  PROJECT_OVERVIEW.md
frontend/: .buildtrigger  .env.example  .env.production.example  .eslintrc.cjs  .gitignore  Dockerfile  README.md  _worker.js  index.html  package.json  tailwind.config.ts  tsconfig.json  (+2 more)
(+71 files in other folders)
